2005-12-14  Konstantin Triger <kostat@mainsoft.com>

	* XmlTextWriter.cs: allow null string in WriteCData.

2005-12-08  Andrew Skiba  <andrews@mainsoft.com>

	* IXmlNamespaceResolver.cs: delete TARGET_JVM,
	no need to mangle the name

2005-11-30  Konstantin Triger  <kostat@mainsoft.com>

	* IXmlNamespaceResolver.cs: TARGET_JVM namespace change.

2005-11-17  Vladimir Krasnov <vladimirk@mainsoft.com>

	* XmlInputStream.cs: fixed Initialize method to be able 
	to read unicode file without BOM. TARGET_JVM only.

2005-11-14  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNodeReader.cs : removed historical one.

2005-11-10  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReader.cs, XmlNode.cs :
	  [DebuggerDisplay] are not worthy of existing.

2005-11-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTokenizedType.cs, XmlNodeOrder.cs : so those enums happen to
	  have [Serializable] in .NET 1.x, and removed in 2.0 (enums are
	  anyways serializable, so those attributes do not make sense).

2005-11-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlValidatingReader.cs : added CanReadBinaryContent.
	* XmlTextReader.cs, XmlTextReader2.cs : GetNamespacesInScope() are
	  now both public and private (i.e. hush IsVirtual).
	* XmlWriterSettings.cs, XmlWriter.cs, XmlTextWriter.cs :
	  NormalizeNewLines vanished.

2005-11-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReader.cs : MoveToAttribute(int) is virtual in NET_2_0.

2005-11-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlConvert.cs : implemented VerifyTOKEN().

2005-11-09  Atsushi Enomoto <atsushi@ximian.com>

	* XmlConvert.cs : VerifyNCName() and VerifyName() throws
	  ArgumentNullException for "".

2005-11-07  Atsushi Enomoto <atsushi@ximian.com>

	* XmlReader.cs : dependent XmlSchemaValidationFlags fix.
	  Added ReadElementContentAsObject() and ReadContentAsObject().
	* XmlReader.cs, XmlTextReader.cs :
	  LookupNamespace(string,bool) is now private.
	* XmlReader.cs, XmlNode,cs :
	  [DebuggerDisplay].
